# orbyts_black_hole_shadows

./: README.md  Session8.ipynb  concepts.ipynb  esgb_cases.py  photon_orbits.ipynb  pyproject.toml  setup.cfg  setup.py  template.ipynb  test.ipynb  test.py  workflow.ipynb
black_hole_shadows/: orbits.py  plotting.py  sources.py  utils.py
docs/: conf.py  index.rst  orbyts_black_hole_shadows.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  orbyts_black_hole_shadows.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  orbyts_black_hole_shadows.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/orbyts_black_hole_shadows/: orbits.html  plotting.html  sources.html  utils.html
docs/_build/html/_sources/: modules.rst.txt
src/orbyts_black_hole_shadows/: orbits.py  plotting.py  sources.py  utils.py
src/orbyts_black_hole_shadows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
