# setup.cfg
[metadata]
name = orbytsbhs
version = 0.1.0
author = Laurens Smulders
author_email = laurenssmulders21@proton.me
desdcription = A Python packaage for simulating black hole shadows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laurenssmulders/orbyts_black_hole_shadows
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.25
    numpy>=1.20
    matplotlib>=3.3
    scipy>=1.6

[options.packages.find]
where = src